--- a/television_workbook.ipynb
+++ b/television_workbook.ipynb
@@ -1965,7 +1965,6 @@
    ],
    "source": [
     "# Take a look at the relationship between popularity and ratings\n",
-    "sns.set_style(\"ticks\")\n",
     "fig = plt.figure(figsize=(12,7))\n",
     "plt.suptitle('Comparing Rating and Popularity by Genre', fontsize = 20)\n",
     "ax = fig.add_subplot(111)\n",
@@ -2243,7 +2242,7 @@
    ],
    "source": [
     "sns.set_style(\"ticks\")\n",
-    "pop_per_network.plot.bar(figsize=(10,6))"
+    "pop_per_network.plot.bar(figsize=(10,6), color='deepskyblue')"
    ]
   },
   {
@@ -2314,8 +2313,10 @@
    ],
    "source": [
     "# Plot out an average\n",
-    "sns.set_style(\"ticks\")\n",
-    "network_pop_avg.plot.bar(figsize=(10,6))"
+    "network_pop_avg.sort_values(ascending=False).plot.bar(figsize=(12,7), color='deepskyblue')\n",
+    "plt.title('Average # of Ratings by Network', fontsize=20, pad=10)\n",
+    "plt.xlabel('Network', fontsize=15, labelpad=10)\n",
+    "plt.ylabel('Average # of Ratings', fontsize=15, labelpad=10)"
    ]
   },
   {
@@ -2403,15 +2404,27 @@
     }
    ],
    "source": [
-    "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10,5))\n",
+    "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(14,7))\n",
     "\n",
     "axs[0].scatter(df_contemp_adapt['original'], df_contemp_adapt['num_imdb_ratings'])\n",
     "axs[0].scatter(df_contemp_orig['original'], df_contemp_orig['num_imdb_ratings'])\n",
     "axs[0].set_title('Popularity for Adapted & Original Content')\n",
+    "axs[0].set_xlabel('Type of Content')\n",
+    "axs[0].set_ylabel('# of Ratings')\n",
     "\n",
     "axs[1].scatter(df_contemp_adapt['original'], df_contemp_adapt['rt_critic_rating'])\n",
     "axs[1].scatter(df_contemp_orig['original'], df_contemp_orig['rt_critic_rating'])\n",
-    "axs[1].set_title('Ratings for Adapted & Original Content')"
+    "axs[1].set_title('Ratings for Adapted & Original Content')\n",
+    "axs[1].set_xlabel('Type of Content')\n",
+    "axs[1].set_ylabel('Rating')\n",
+    "\n",
+    "axs[0].locator_params(axis='x', nbins=2)\n",
+    "axs[1].locator_params(axis='x', nbins=2)\n",
+    "x_ticks = ['Adapted', 'Adapted', 'Original']\n",
+    "axs[0].set_xticklabels(x_ticks)\n",
+    "axs[1].set_xticklabels(x_ticks)\n",
+    "\n",
+    "plt.tight_layout(pad=3)"
    ]
   },
   {
